--- a/android/pom.xml
+++ b/android/pom.xml
@@ -37,6 +37,11 @@
     	<artifactId>logback-classic</artifactId>
     	<version>1.0.13</version>
     </dependency>
+    <dependency>
+    	<groupId>org.blackbananacoin</groupId>
+    	<artifactId>bkbc-common</artifactId>
+    	<version>0.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
